add Pluto+ defconfig and DTS
This adds the defconfig and DTS for the Pluto+ SDR, using the diff
in https://github.com/plutoplus/plutoplus as a basis.

Signed-off-by: Daniel Estévez <daniel@destevez.net>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -95,6 +95,7 @@ dtb-$(CONFIG_ARCH_ZYNQ) += zynq-zc702.dtb \
 	zynq-cse-qspi.dtb \
 	zynq-picozed.dtb \
 	zynq-picozed-sdr2.dtb \
+	zynq-plutoplus.dtb \
 	zynq-pluto-sdr.dtb \
 	zynq-m2k.dtb \
 	zynq-sidekiqz2.dtb \
